# OTPGen

./: .gitattributes  .gitignore  CMakeLists.txt  EmbeddedAssets.qrc  LICENSE  README.md
.github/: ISSUE_TEMPLATE.md
.gitlab/issue_templates/: Bug.md
Android/: README.md  build.gradle
Android/app/: CMakeLists.txt  build.gradle
Android/app/src/androidTest/java/com/magiruuvelvet/otpgen/: DeviceUnitTests.kt  TokenTests.kt
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/cpp/: java_heap.i  jni-helpers.cpp  jni-helpers.hpp  libotpgen-bindings.cpp  libotpgen-tests.cpp  libotpgen.i  qrcode.i  std_string_ref.i
Android/app/src/main/java/com/magiruuvelvet/libotpgen/: libotpgenIndexingPlaceholder.kt
Android/app/src/main/java/com/magiruuvelvet/otpgen/: AppCompatPreferenceActivity.kt  MainActivity.kt  OTPGen.kt  SettingsActivity.kt
Android/app/src/main/java/com/magiruuvelvet/otpgen/Activities/: MainActivity.kt  SettingsActivity.kt
Android/app/src/main/java/com/magiruuvelvet/otpgen/Tokens/: AuthyToken.kt  HOTPToken.kt  OTPGen.kt  OTPToken.kt  SteamToken.kt  TOTPToken.kt
Android/app/src/main/java/com/magiruuvelvet/otpgen/Utils/: ResourceManager.java
Android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
Android/app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
Android/app/src/main/res/layout/: activity_main.xml  content_main.xml
Android/app/src/main/res/menu/: menu_main.xml
Android/app/src/main/res/values/: strings.xml
Android/app/src/main/res/xml/: pref_general.xml  pref_headers.xml
Android/app/src/test/java/com/magiruuvelvet/otpgen/: HostUnitTests.kt
CMake/Modules/: DetectOS.cmake
Desktop/applications/: otpgen.desktop
GuiAssets/: EmbeddedAssets.qrc  clock.svgz  close.svgz  export.svgz  import.svgz  minimize.svgz  pencil-edit-button.svgz  qr-code.svgz  restore.svgz  save.svgz
GuiAssets/logos/: andotp.svgz  authy.svgz  steam.svgz
Libs/: README.md
Libs/cryptopp/: CMakeLists.txt
Libs/libcotp/: otp.c
Libs/qtkeychain/: CMakeLists.txt
Libs/qtkeychain/qt5keychain/: CMakeLists.txt
Libs/qtkeychain/qtkeychain/: CMakeLists.txt  keychain.h
Libs/qtlockedfile/: qtlockedfile.cpp  qtlockedfile.h  qtlockedfile_unix.cpp  qtlockedfile_win.cpp
Libs/qtsingleapplication/: qtlocalpeer.cpp  qtlocalpeer.h  qtsingleapplication.cpp  qtsingleapplication.h
Libs/sqlite3/sqlite/: sqlite-config.h
Libs/sqlite_modern_cpp/hdr/: sqlite_modern_cpp.h
Libs/sqlite_modern_cpp/hdr/sqlite_modern_cpp/: errors.h  log.h
Libs/sqlite_modern_cpp/hdr/sqlite_modern_cpp/utility/: variant.h
Libs/zlib/: CMakeLists.txt
Libs/zxing-cpp/: CMakeLists.txt
Libs/zxing-cpp/imagereader/: ImageReaderSource.cpp  jpgd.cpp
Source/: main.cpp
Source/Cli/: CMakeLists.txt  main.cpp
Source/Config/: AppConfig.cpp  AppConfig.hpp
Source/Core/: AppSupport.hpp  AuthyToken.cpp  AuthyToken.hpp  CMakeLists.txt  HOTPToken.cpp  HOTPToken.hpp  OTPGen.cpp  OTPGen.hpp  OTPGenErrorCodes.hpp  OTPToken.cpp  OTPToken.hpp  SteamToken.cpp  SteamToken.hpp  TOTPToken.cpp  TOTPToken.hpp  TokenDatabase.cpp  TokenDatabase.hpp  TokenStore.cpp  TokenStore.hpp  Tokens.hpp  otpauthURI.cpp  otpauthURI.hpp
Source/Core/AppSupport/: Authy.cpp  Authy.hpp  Steam.cpp  Steam.hpp  andOTP.cpp  andOTP.hpp
Source/Core/Import/: Authy.cpp  Authy.hpp  Steam.cpp  Steam.hpp  andOTP.cpp  andOTP.hpp
Source/Core/Migration/: TokenArchiveVersions.cpp  TokenArchiveVersions.hpp
Source/Core/Tokens/: AuthyToken.cpp  AuthyToken.hpp  HOTPToken.cpp  HOTPToken.hpp  OTPToken.cpp  OTPToken.hpp  SteamToken.cpp  SteamToken.hpp  TOTPToken.cpp  TOTPToken.hpp
Source/Core/Tokens/Internal/: libcotpsupport.hpp
Source/Core/Tools/: QRCode.cpp  QRCode.hpp  QRDecoder.cpp  QRDecoder.hpp  SvgTool.cpp  SvgTool.hpp  otpauthURI.cpp  otpauthURI.hpp  zlibTool.cpp  zlibTool.hpp
Source/Gui/: CMakeLists.txt  FramelessContainer.cpp  FramelessContainer.hpp  GuiConfig.cpp  GuiConfig.hpp  GuiHelpers.cpp  GuiHelpers.hpp  MainWindow.cpp  MainWindow.hpp  OTPWidget.cpp  OTPWidget.hpp  PasswordInputDialog.cpp  PasswordInputDialog.hpp  TitleBar.cpp  TokenEditor.cpp  TokenEditor.hpp  TokenTableWidget.cpp  TokenTableWidget.hpp  TokenTableWidgetRow.cpp  TokenTableWidgetRow.hpp  UserInputDialog.cpp  UserInputDialog.hpp  WidgetBase.cpp  WidgetBase.hpp  main.cpp
Source/Gui/Assets/: add.svgz  app-icon.svgz  copy-content.svgz  info.svgz  maximize.svgz  remove.svgz
Source/Gui/Tools/: SvgTool.cpp
Source/Gui/WidgetHelpers/: DialogBase.cpp  DialogBase.hpp  FramelessContainer.hpp  QRootWidget.hpp  TitleBar.cpp  TitleBar.hpp  WidgetBase.cpp  WidgetBase.hpp
Source/Gui/Widgets/: TokenTableWidget.hpp
Source/Gui/Windows/: MainWindow.cpp  MainWindow.hpp  TokenEditor.cpp  TokenEditor.hpp  UserInputDialog.cpp  UserInputDialog.hpp
Source/MigrationTool/: CMakeLists.txt  main.cpp
Source/MigrationTool/OldFormat/: TokenDatabase_Old.cpp  TokenDatabase_Old.hpp  TokenStore_Old.cpp  TokenStore_Old.hpp  Tokens_Old.hpp
Source/MigrationTool/OldFormat/Tokens_Old/: AuthyToken_Old.cpp  AuthyToken_Old.hpp  HOTPToken_Old.cpp  HOTPToken_Old.hpp  OTPToken_Old.cpp  OTPToken_Old.hpp  SteamToken_Old.cpp  SteamToken_Old.hpp  TOTPToken_Old.cpp  TOTPToken_Old.hpp
Source/QRCodeSupport/: CMakeLists.txt  QRCode.cpp  QRCode.hpp
Source/Shared/: AppConfig.cpp  AppConfig.hpp  CMakeLists.txt  CommandLineOperation.hpp  Signals.hpp  StdinEchoMode.cpp  StdinEchoMode.hpp
Tests/: CMakeLists.txt  blank-test.hpp  main.cpp  otpauth-tests.hpp  otpgen-tests.hpp  qr-code-test.hpp  steam-base-test.hpp
Tests/libotpgen/: build.sh  test.cpp
WasmLoader/: otpgen.html  qtloader.js
